# nirust

./: .gitignore  Cargo.toml  README.md
benchmarks/: README.md  requirements.txt
benchmarks/dataprep/: get_aomic_piop1_subject.sh  get_schaefer_parcs.py
benchmarks/python/code/: parcellate.py
src/: args.rs  commands.rs  image.rs  main.rs  masking.rs  statistics.rs
src/commands/: base.rs  maskhemi.rs  parcellate.rs  parse.rs  tsnr.rs
