[package]
name = "nirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nifti = { version = "0.15.0", features = ["ndarray_volumes"]}
ndarray = { version = "0.15.6", features = ["rayon"]}
ndarray-stats = "0.5.1"
log = { version = "0.4", features = ["kv_unstable"]}
simple_logger = "4.0.0"
clap = { version = "4.0.29", features = ["derive"]}
itertools = "0.10.5"
smartcore = { version = "0.3.0", features = ["ndarray-bindings"]}

[profile.release]
debug = true
